--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ h1 {
   top: -50%;
   width: 100%;
   height: 100%;
-  background: rgb(255, 188, 65);
+  /* background: rgb(255, 188, 65); */
   transform: skewY(345deg);
   transition: 0.5s;
 }
@@ -369,13 +369,13 @@ h1 {
 }
 
 .containerProduct .card::after {
-  content: "Shale Pizza";
+  content: "ThanNguyen";
   position: absolute;
   bottom: 0;
   left: 36px;
   font-weight: 600;
   font-size: 1em;
-  color: rgba(100, 100, 100, 0.295);
+  /* color: rgba(100, 100, 100, 0.295); */
 }
 
 .containerProduct .card .imgBox {
